# Rust_C_Benchmark

./: .gitignore  README.md  perf.data
Intensive/CPU/: README.md  cpu.cpp  cpu.rs  cpu_cpp
Intensive/IO/: README.md  io.cpp  io.rs  io_cpp
Intensive/Memory/: README.md  mem.cpp  mem.rs  mem_cpp
bfs/: bfs  bfs_c  bfs_perf.c  bfs_perf_c  out.folded  perf.data
bfs/src/: bfs_perf.rs
binary_search/: binary_search_c  binary_search_perf_c  out.folded
dfs/: Cargo.toml  dfs  dfs_c  dfs_perf_c  out.folded
fuse/: README.md
fuse/c/: .gitignore  Makefile  fio_c.fio  fusec.c
fuse/rs/: Makefile  fio_rs.fio
fuse/rs/fusers/: Cargo.toml
fuse/rs/fusers/src/: main.rs
quicksort/: Cargo.toml  out.folded
runtime_check/: Cargo.toml
runtime_check/src/: main.rs
selection_sort/: Cargo.toml  out.folded  selection_sort_c  selection_sort_perf_c
selection_sort/src/: selection_sort.rs
